[package]
name = "smzdh"
version = "0.1.0"
authors = ["paomian <qtang@leancloud.rocks>"]

[dependencies]
hyper = "*"
router = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
websocket = "*"
postgres = "*"
log = "*"
lazy_static = "*"
iron = "*"
redis = "*"
rust-crypto = "*"

[dependencies.log4rs]
version = "*"
features = ["yaml"]
