[package]
name = "smzdh"
version = "0.1.0"
authors = ["paomian <qtang@leancloud.rocks>"]

[dependencies]
hyper = "*"
router = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
websocket = "*"
log = "*"
lazy_static = "*"
iron = "*"
rand = "*"
redis = "*"

[dependencies.log4rs]
version = "*"
features = ["yaml"]

[dependencies.nom]
version = "*"
features = ["regexp","regexp_macros"]

[dependencies.smzdh_commons]
version = "*"
path = "smzdh_commons"
