[package]
name = "smzdh_commons"
version = "0.1.0"
authors = ["paomian <xpaomian@gmail.com>"]

[dependencies]
iron = "*"
rust-crypto = "*"
rustc-serialize = "*"
redis = "*"
log = "*"
rand = "*"
router = "*"
clippy = "*"
chrono = "*"

[dependencies.postgres]
version = "*"
features = ["rustc-serialize","chrono"]
