[package]
name = "smzdh_commons"
version = "0.1.0"
authors = ["paomian <xpaomian@gmail.com>"]

[dependencies]
iron = "*"
rust-crypto = "*"
rustc-serialize = "*"
redis = "*"
log = "*"
rand = "*"
router = "*"
clippy = "*"
chrono = { version = "*", features = ["rustc-serialize"] }
url = "*"
plugin = "*"
hyper = "*"
bitflags = "*"
bincode = {version = "*", features = ["rustc-serialize"]}
postgres = {version = "*", features = ["with-rustc-serialize","with-chrono"]}
regex = "*"
